# reels_transcriber

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  cli.py  install.command  install.sh  main.py  pyproject.toml  pytest.ini  run_app.bat  run_app.command  run_app.sh
config/: __init__.py  settings.py
core/: __init__.py  async_pipeline.py  audio_processor.py  downloader.py  file_manager.py  performance_integration.py  pipeline.py  resilience.py  transcriber.py  yt_dlp_optimizer.py
core/installer/: __init__.py  dependencies.py  manager.py  models.py  progress.py  validator.py
gui/: __init__.py  error_dialogs.py  window.py  worker.py
scripts/: format.sh  quick_format.sh  quickfix.sh  run_tests.py
tests/: __init__.py  conftest.py
tests/fixtures/: mock_data.py
tests/integration/: test_real_instagram_urls.py  test_resilience_patterns.py  test_workflow.py
tests/mocks/: resilient_services.py
tests/performance/: benchmark.py  test_benchmarks.py
tests/unit/: test_audio_processor.py  test_downloader.py  test_error_handler.py  test_file_manager.py  test_logging_config.py  test_pipeline.py  test_progress.py  test_security_validation.py  test_transcriber.py  test_validators.py
utils/: __init__.py  common_patterns.py  error_handler.py  logging_config.py  performance_benchmark.py  progress.py  validators.py
